PartnerDemo/src/objects/Footer_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Footer Settings</relationshipLabel>
        <relationshipName>Footer_Settings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Header_Name__c</fullName>
        <label>Header Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submenus_for_Footers__c</fullName>
        <label>Submenus for Footers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Footer Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Submenus_for_Footers__c</columns>
        <columns>Header_Name__c</columns>
        <columns>is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Footer-{0000}</displayFormat>
        <label>Footer Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Footer Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>